--- a/MySolarSystem.csproj
+++ b/MySolarSystem.csproj
@@ -55,6 +55,7 @@
 	  <None Remove="Resources\Images\icon_home.svg" />
 	  <None Remove="Resources\Images\icon_house.svg" />
 	  <None Remove="Resources\Images\icon_lightbulb.svg" />
+	  <None Remove="Resources\Images\icon_telescope.svg" />
 	  <None Remove="Resources\Images\jupiter.svg" />
 	  <None Remove="Resources\Images\mars.svg" />
 	  <None Remove="Resources\Images\mercury.svg" />
@@ -70,6 +71,8 @@
 
 	<ItemGroup>
 		<PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="7.0.0" />
+		<PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+		<PackageReference Include="System.Net.Http" Version="4.3.4" />
 	</ItemGroup>
 
 	<ItemGroup>
@@ -83,6 +86,9 @@
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
 	  <MauiXaml Update="Pages\SpecificLesson.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
+	  <MauiXaml Update="Pages\Telescope.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
 	</ItemGroup>
